# src/api/handlers/users.go
@@ -10,14 +10,98 @@ import (
 	"github.com/omidhaqi/clean-web-api/services"
 )
 
-type UserHandler struct {
+type UsersHandler struct {
 	services *services.UserService
 }
 
-func NewUserHandler(cfg *config.Config) *UserHandler{
+func NewUserHandler(cfg *config.Config) *UsersHandler{
 	service := services.NewUserService(cfg)
-	return &UserHandler{services: service}
+	return &UsersHandler{services: service}
 }
+
+// LoginByUsername godoc
+// @Summary LoginByUsername
+// @Description LoginByUsername
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.LoginByUsernameRequest true "LoginByUsernameRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/login-by-username [post]
+func (h *UsersHandler) LoginByUsername(c *gin.Context) {
+	req := new(dto.LoginByUsernameRequest)
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, -1, err))
+		return
+	}
+	token, err := h.services.LoginByUsername(req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, -1, err))
+		return
+	}
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(token, true, 0))
+}
+// RegisterByUsername godoc
+// @Summary RegisterByUsername
+// @Description RegisterByUsername
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.RegisterUserByUsernameRequest true "RegisterUserByUsernameRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/register-by-username [post]
+func (h *UsersHandler) RegisterByUsername(c *gin.Context) {
+	req := new(dto.RegisterUserByUsernameRequest)
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, -1, err))
+		return
+	}
+	err = h.services.RegisterByUsername(req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, -1, err))
+		return
+	}
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(nil, true, 0))
+}
+// RegisterLoginByMobileNumber godoc
+// @Summary RegisterLoginByMobileNumber
+// @Description RegisterLoginByMobileNumber
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.RegisterLoginByMobileRequest true "RegisterLoginByMobileRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/login-by-mobile [post]
+func (h *UsersHandler) RegisterLoginByMobileNumber(c *gin.Context) {
+	req := new(dto.RegisterLoginByMobileRequest)
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, -1, err))
+		return
+	}
+	token, err := h.services.RegisterLoginByMobileNumber(req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, -1, err))
+		return
+	}
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(token, true, 0))
+}
+
+
 // SendOtp godoc
 // @Summary Send OTP to user
 // @Description Send OTP to user 
@@ -29,7 +113,7 @@ func NewUserHandler(cfg *config.Config) *UserHandler{
 // @Failure 409 {object} helper.BaseHttpResponse "Failed"
 // @Failure 409 {object} helper.BaseHttpResponse "Failed"
 // @Router /v1/users/send-otp [post]
-func (h *UserHandler) SendOtp(c *gin.Context)  {
+func (h *UsersHandler) SendOtp(c *gin.Context)  {
 	req := new(dto.GetOtpRequest)
 	err:=c.ShouldBindJSON(req)
 	if err != nil {
@@ -40,7 +124,7 @@ func (h *UserHandler) SendOtp(c *gin.Context)  {
 	err = h.services.SendOtp(req)
 
 	if err != nil {
-		c.AbortWithStatusJSON(helper.TranslateErrToStatusCode(err),helper.GenerateBaseResponseWithError(nil,false,-1,err))
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),helper.GenerateBaseResponseWithError(nil,false,-1,err))
 		return
 	}
 	//call internal SMS service
