# src/api/routers/users.go
@@ -10,6 +10,8 @@ import (
 func User(routers *gin.RouterGroup,cfg *config.Config)  {
 	var h = handlers.NewUserHandler(cfg)
 	
-	routers.POST("/send-otp", middlewares.OtpLimiter(cfg),h.SendOtp)
-	
+	routers.POST("/send-otp", middlewares.OtpLimiter(cfg), h.SendOtp)
+	routers.POST("/login-by-username", h.LoginByUsername)
+	routers.POST("/register-by-username", h.RegisterByUsername)
+	routers.POST("/login-by-mobile", h.RegisterLoginByMobileNumber)
 }
